zutil-inheritance/tests/failure/missing_parent.stderr
error[E0308]: mismatched types
  --> tests/failure/missing_parent.rs:22:1
   |
22 | / zutil_inheritance::value! {
23 | |     struct C(B) {}
24 | |     impl Self {}
25 | | }
   | | ^
   | | |
   | | expected a tuple with 2 elements, found one with 1 element
   | |_arguments to this function are incorrect
   |   this return type influences the call expression's return type
   |
   = note: expected tuple `(BFields, AFields)`
              found tuple `(BFields,)`
note: associated function defined here
  --> src/lib.rs
   |
   |     fn from_fields(base: BaseStorage, fields: Self::Fields) -> Self;
   |        ^^^^^^^^^^^
   = note: this error originates in the macro `zutil_inheritance::value` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0308]: mismatched types
  --> tests/failure/missing_parent.rs:22:1
   |
22 | / zutil_inheritance::value! {
23 | |     struct C(B) {}
24 | |     impl Self {}
25 | | }
   | | ^
   | | |
   | | expected a tuple with 2 elements, found one with 1 element
   | |_arguments to this function are incorrect
   |   this return type influences the call expression's return type
   |
   = note: expected tuple `(BMethods, AMethods)`
              found tuple `(BMethods,)`
note: associated function defined here
  --> src/lib.rs
   |
   |     fn from_methods(base: BaseVTable, methods: Self::Methods) -> Self;
   |        ^^^^^^^^^^^^
   = note: this error originates in the macro `zutil_inheritance::value` (in Nightly builds, run with -Z macro-backtrace for more info)
